<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayoutLimite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvTareaLimite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milmedium"
            android:text="@string/agregar_tarea_limite"
            android:textColor = "?android:textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/etNombreTareaLimite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNombreTareaLimite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:ems="10"
            android:fontFamily="@font/millight"
            android:hint="@string/nombre_tarea"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/etDescripcionTareaLimite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTareaLimite" />

        <EditText
            android:id="@+id/etDescripcionTareaLimite"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:backgroundTintMode="add"
            android:ems="10"
            android:fontFamily="@font/millight"
            android:hint="@string/descripciontarea"
            app:layout_constraintBottom_toTopOf="@+id/etFechaLimite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombreTareaLimite" />


        <TextView
            android:id="@+id/etFechaLimite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/milmedium"
            android:text="@string/elegir_la_fecha"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_edit_calendar_24"
            app:layout_constraintBottom_toTopOf="@+id/spinnerColorLimite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescripcionTareaLimite" />


        <TextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/millight"
            android:text="@string/colorTV"
            android:textColor = "?android:textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerColorLimite"
            app:layout_constraintEnd_toStartOf="@+id/spinnerColorLimite"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerColorLimite" />


        <Spinner
            android:id="@+id/spinnerColorLimite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvAgregarAlarmaLimite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvColor"
            app:layout_constraintTop_toBottomOf="@+id/etFechaLimite" />

        <TextView
            android:id="@+id/tvAgregarAlarmaLimite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_baseline_add_alarm_24"
            android:fontFamily="@font/milmedium"
            android:text="@string/agregar_un_recordatorio"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnTareaLimite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerColorLimite" />

        <Button
            android:id="@+id/btnTareaLimite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milmedium"
            android:text="@string/botonCompletarAgregarTarea"
            android:textColor = "@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAgregarAlarmaLimite" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>